# cpp_game_courses

./: .gitignore
.github/workflows/: c-cpp.yml
game/: CMakeLists.txt  main.cpp
game/android/: CMakeLists.txt
game/android/app/: build.gradle
game/android/app/src/androidTest/java/sdim/game/example/: ExampleInstrumentedTest.java
game/android/app/src/main/: AndroidManifest.xml
game/android/app/src/main/java/sdim/game/example/: JniManager.java  MainActivity.java
game/android/app/src/test/java/sdim/game/example/: ExampleUnitTest.java
game/android/gradle/wrapper/: gradle-wrapper.properties
game/engine/: CMakeLists.txt  CMakeSources.txt  todo.md
game/engine/libs/glew/: CMakeLists.txt
game/engine/libs/picopng/: picoPNG.cpp
game/engine/src/: Engine.cpp  Engine.hpp  IScene.hpp  TextureLoader.cpp  TextureLoader.hpp  f_shader.glsl  partical_shader.glsl  v_shader.glsl
game/engine/src/OpenGL/: GLHeaders.hpp  includes.hpp
game/engine/src/OpenGL/renderer/: GL_Renderer.cpp  GL_Renderer.hpp
game/engine/src/OpenGL/shader/: GLParticalProgram.cpp  GLParticalProgram.hpp  GLProgram.cpp  GLProgram.hpp  GlTexture.cpp  GlTexture.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SpriteShader.cpp  SpriteShader.hpp  SpriteShaderProgram.cpp  SpriteShaderProgram.hpp
game/engine/src/OpenGL/vertex/: FloatBuffer.hpp  ParticleBuffer.cpp  ParticleBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
game/engine/src/OpenGL/window/: GL_Window.cpp  GL_Window.hpp
game/engine/src/SDL/event/: WindowEventManagerImpl.cpp  WindowEventManagerImpl.hpp
game/engine/src/SDL/renderer/: SDLRenderer.cpp  SDLRenderer.hpp
game/engine/src/SDL/window/: WindowImpl.cpp  WindowImpl.hpp
game/engine/src/bitmap/: Bitmap.cpp  Bitmap.hpp
game/engine/src/common/: IKeyboardKeyListener.cpp  IKeyboardKeyListener.hpp  IRenderer.hpp  IResourcesManager.hpp  IShaderProgram.hpp  ITexture.hpp  IWindow.hpp  IWindowEventManager.hpp  JavaManager.cpp  JavaManager.hpp  Scheduler.cpp  Scheduler.hpp  Texture.cpp  Texture.hpp
game/engine/src/common/event/: IWindowEventManager.hpp
game/engine/src/common/renderer/: IRenderer.hpp  IShaderProgram.hpp
game/engine/src/common/window/: IWindow.hpp
game/engine/src/domain/: Line2d.cpp  Line2d.hpp  Line3f.cpp  Line3f.hpp  Point2d.cpp  Point2d.hpp  Point3f.cpp  Point3f.hpp  RGBAColor.hpp
game/engine/src/domain/event/: EventType.hpp  WindowEvent.cpp  WindowEvent.hpp
game/engine/src/engine/: Engine.cpp  Engine.hpp  EngineFactory.cpp  EngineFactory.hpp
game/engine/src/entity/: INodeData.cpp  INodeData.hpp  IParticleBuffer.cpp  IParticleBuffer.hpp  IShaderBuffer.cpp  IShaderBuffer.hpp  ITextureMapSettable.hpp  IVertexBuffer.hpp  Line2d.hpp  Line3f.hpp  MeshData.cpp  MeshData.hpp  Node.cpp  Node.hpp  ParticleEmmiter.cpp  ParticleEmmiter.hpp  Point2d.hpp  Point3f.hpp  RGBAColor.cpp  RGBAColor.hpp  Sound.cpp  Sound.hpp  Sprite.cpp  Sprite.hpp  SpriteData.cpp  SpriteData.hpp  TextureController.cpp  TextureController.hpp  TransformData.cpp  TransformData.hpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp  Vertex.cpp  Vertex.hpp
game/engine/src/entity/event/: IWindowEvent.cpp  IWindowEvent.hpp
game/engine/src/entity/mesh/: Mesh.cpp  Mesh.hpp
game/engine/src/renderer/: GL_Renderer.cpp  GL_Renderer.hpp  IRenderer.cpp  IRenderer.hpp  SDLRenderer.cpp  SDLRenderer.hpp
game/engine/src/res/: ResourcesManager.cpp  ResourcesManager.hpp
game/engine/src/scenes/: IScene.hpp  LineScene.cpp  LineScene.hpp  NodeScene.cpp  NodeScene.hpp  SceneManager.cpp  SceneManager.hpp  ScenesFactory.cpp  ScenesFactory.hpp  SpitesScene.cpp  SpitesScene.hpp
game/engine/src/shader/: IPixelShader.hpp  IPoint3Shader.hpp  LensPixelShader.cpp  LensPixelShader.hpp  LensPointShader.cpp  LensPointShader.hpp  Shaders.cpp  Shaders.hpp  f_shader.txt  shader_cooments.txt  v_shader.txt
game/engine/src/task/: TaskManager.cpp  TaskManager.hpp
game/engine/src/utils/: CommandLineUtil.cpp  FileUtils.cpp  GLUtils.cpp  TextureLoader.cpp  TimeInteractor.cpp  TimeInteractor.hpp
game/engine/src/window/: GL_Window.cpp  GL_Window.hpp  IWindow.cpp  IWindow.hpp  IWindowEventManager.cpp  IWindowEventManager.hpp  SDLWindow.cpp  SDLWindow.hpp  WindowEventManager.cpp  WindowEventManager.hpp  WindowEventManagerImpl.cpp  WindowEventManagerImpl.hpp  WindowImpl.cpp  WindowImpl.hpp
game/game/: Person.cpp  Person.hpp
lesson1/: CMakeLists.txt  README.md  main.cpp  printFast.cpp  printSlow.cpp  scanFast.cpp
lesson1/test/: CMakeLists.txt  README.md  test.cpp
lesson2/: .gitignore  CMakeLists.txt  bestLib.ipp  homework.md  library.cpp  library.h  readme.md
lesson2/apps/app_dynamic/: .gitignore  CMakeLists.txt  main.cpp
lesson2/apps/app_header/: .gitignore  CMakeLists.txt  main.cpp  main2.cpp
lesson2/apps/app_shared/: .gitignore  CMakeLists.txt  main.cpp
lesson2/apps/app_static/: .gitignore  CMakeLists.txt  main.cpp  main2.cpp
lesson2/apps/app_sublib/: .gitignore  CMakeLists.txt  README.md
lesson2/apps/app_sublib/lib_src/: CMakeLists.txt  library.hpp
sdl2_example/: CMakeLists.txt  README.md  main.cpp
